--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 			background: #222;
 			color: white;
 			font-weight: bold;
-			font-size: 50px;
 			text-transform: uppercase;
 			letter-spacing: 1px;
 			min-height: 100vh;
 			display: flex;
 			justify-content: center;
 			align-items: center;
-			padding: max(5%, 50px) 15px;
 		}
+		body{padding: max(5%, 50px) 15px;}
+		h1{font-size: 50px; font-family: sans-serif;}
 	</style>
 </head>
 <body>
